--- a/style.css
+++ b/style.css
@@ -14,14 +14,42 @@ body {
 }
 
 #week #overview .card {
-    border: 5px solid #2ECC71;
-    background-color: #2ECC71;
     border-radius: 20px;
     padding: 10px;
     width: 20mm;
     text-align: center;
     box-shadow: 5px 5px 5px rgb(119, 119, 119);
     color: white;
+}
+
+#sun {
+    border: 10px solid #2ECC71;
+    background-color: #2ECC71;
+}
+
+#mon {
+    border: 10px solid #F1C40F;
+    background-color: #F1C40F;
+}
+#tue {
+    border: 10px solid #F39C12;
+    background-color: #F39C12;
+}
+#wed {
+    border: 10px solid #E74C3C;
+    background-color: #E74C3C;
+}
+#thu {
+    border: 10px solid #8E44AD;
+    background-color: #8E44AD;
+}
+#fri {
+    border: 10px solid #2ECC71;
+    background-color: #2ECC71;
+}
+#sat {
+    border: 10px solid #34495E;
+    background-color: #34495E;
 }
 
 #today #overview .card{
